# agent-clifs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/agent_clifs/: __init__.py  _io.py  bm25.py  cli.py  exceptions.py  formatters.py  vfs.py
src/agent_clifs/commands/: __init__.py  _parser.py  file_ops.py  find.py  grep.py  navigation.py  read.py  search.py
tests/: conftest.py  test_append.py  test_bm25.py  test_cat.py  test_cd.py  test_cli.py  test_commands.py  test_cp.py  test_find.py  test_grep.py  test_head.py  test_ls.py  test_mkdir.py  test_mv.py  test_pipes.py  test_pwd.py  test_redirection.py  test_rm.py  test_security.py  test_sed.py  test_tail.py  test_touch.py  test_tree.py  test_vfs.py  test_view.py  test_wc.py  test_write.py
