[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-clifs"
version = "1.0.0"
description = "A CLI-driven virtual filesystem for AI agents"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.10"
authors = [{name = "joroden"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/joroden/agent-clifs"
Repository = "https://github.com/joroden/agent-clifs"
Issues = "https://github.com/joroden/agent-clifs/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_clifs = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
commit_parser = "conventional"
tag_format = "v{version}"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
